updated blog and fixed title spacing

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -173,7 +173,8 @@ html,button,input,select,textarea{
 }
 
 h1, h2, h3, h4, h5{
-  font-family: "Merriweather"
+  font-family: "Merriweather";
+  line-height: 1.25;
 }
 
 
